@@ -1,3 +1,7 @@
+2012-10-03 Franz Holzinger  <franz@ttproducts.de>
+	* return a boolean FALSE in decryptPasswordForAutoLogin if there is a problem with the rsaauth backend decryption
+	* do not require rsaauth to be installed
+
 2012-10-02 Franz Holzinger  <franz@ttproducts.de>
 	* return a boolean FALSE if there is a problem with the saltedpasswords
 	* do not require saltedpasswords to be installed
